<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.storyDetail.StoryDetailActivity">

    <ImageView
        android:id="@+id/img_story_detail"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/story_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_story_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nama_uploader"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_story_detail" />

    <TextView
        android:id="@+id/tv_story_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_story_detail_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_story_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_detail_name" />

    <TextView
        android:id="@+id/tv_story_detail_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        app:layout_constraintEnd_toEndOf="@+id/img_story_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_story_detail" />

    <TextView
        android:id="@+id/tv_story_detail_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center|start"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_story_detail_title"
        app:layout_constraintStart_toStartOf="@+id/tv_story_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_detail_title" />

    <TextView
        android:id="@+id/tv_story_detail_description_body"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_textview"
        android:backgroundTint="@color/grey"
        android:padding="8dp"
        android:text="@string/description_body"
        app:layout_constraintEnd_toEndOf="@+id/tv_story_detail_description"
        app:layout_constraintStart_toStartOf="@+id/tv_story_detail_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_detail_description" />
</androidx.constraintlayout.widget.ConstraintLayout>